Update CISA service configuration and UI

--- a/app/templates/cisa/index.html
+++ b/app/templates/cisa/index.html
@@ -53,6 +53,9 @@
                             </svg>
                             搜索
                         </button>
+                        <a href="{{ url_for('cisa.sync_logs') }}" class="btn btn-info font-medium hover:bg-blue-600 transition-colors py-2 px-4 rounded-lg ml-2">
+                查看同步记录
+            </a>
                     </form>
                 </div>
             </div>
